--- a/spring-cloud-samples/config-client-consumer-dev.yml
+++ b/spring-cloud-samples/config-client-consumer-dev.yml
@@ -1,12 +1,1 @@
-server:
-    port: 9092 #启动端口
-spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://gitee.com/zhongzunfa/spring-cloud-config.git
-          search-paths: V1-DEV
-
-  application:
-      name: config-server
+profile: dev
